--- a/style.css
+++ b/style.css
@@ -1,3 +1,159 @@
+@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+
+.smaller-font {
+  font-size: 14px;
+} 
+
+body { 
+  font-family: 'Droid Serif'; 
+  line-height: 1.6;
+}
+
+h1, h2, h3 {
+  font-family: 'Yanone Kaffeesatz';
+  font-weight: bold;
+  color: #00467F;
+}
+
+h1 {
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
+}
+
+.remark-code, .remark-inline-code {
+  font-family: 'Ubuntu Mono';
+}
+
+.TitleAuthor {
+  color:white; 
+  font-weight: normal;
+}
+
+.title-slide .remark-slide-number {
+  display: none;
+}
+.title-slide h1, h2, h3, h4 {
+  text-align: left;
+  color:white;
+  line-height: 0.7;
+  font-weight: bold;
+}
+
+.title-slide {
+  vertical-align: middle;
+  background-color: #00467F;
+}
+
+.logo-title {
+  content: "";
+  position: absolute;
+  top: 15px;
+  right:   15px;
+  height: 88px;
+  width: 267px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(https://cdn.auckland.ac.nz/assets/central/central-services/mediaandmarketing/uoa-logos-2015/uoa-logo-2015-reverse.png);
+}
+
+.logo-slide {
+  content: "";
+  position: absolute;
+  top: 35px;
+  right:   15px;
+  height: 96px;
+  width: 100px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(https://cpb-ap-se2.wpmucdn.com/blogs.auckland.ac.nz/dist/d/79/files/2015/10/uoa-v-colour2.png);
+}
+
+.left-column {
+  width: 65%;
+  float: left;
+  word-wrap: break-word;
+}
+
+.right-column {
+  width: 30%;
+  float: right;
+  word-wrap: break-word;
+}
+
+.left-column-s {
+  width: 75%;
+  float: left;
+  word-wrap: break-word;
+}
+
+.right-column-s {
+  width: 20%;
+  float: right;
+  word-wrap: break-word;
+}
+
+.footer {
+  content: "";
+  position: absolute;
+  bottom: 17px;
+  color:gray;
+  font-size: 10pt;
+}
+
+@page {
+  size: 1210px 681px;
+  margin: 0;
+}
+
+@media print {
+  .remark-slide-scaler {
+    width: 100% !important;
+    height: 100% !important;
+    transform: scale(1) !important;
+    top: 0 !important;
+    left: 0 !important;
+  }
+}
+
+.credits {
+  font-size: 12px;
+  line-height: 10px !important;
+  font-family: 'Droid Serif'; 
+}
+
+.codes {
+  line-height: 20px !important;
+}
+
+.questions {
+  font-size: 20px;
+  line-height: 28px !important;
+  font-family: 'Droid Serif'; 
+}
+
+.zoom175 {
+  transition: transform .2s; /* Animation */
+}
+
+.zoom175:hover {
+  transform: scale(1.75) translateY(-20%) translateX(-20%); 
+  /* (Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.pcb-expand {
+  transition: transform .2s;
+}
+
+.pcb-expand:hover {
+  transform: scale(2) translateY(-5%) translateX(-30%);
+}
+
+.color-grey{
+  color: #919191;
+}
+
 .row {
   height: 100%;
   width: auto;
@@ -10,6 +166,16 @@
 
 .row-right {
   width: 49%;
+  float: right;
+}
+
+.last-left {
+  width: 70%;
+  float: left;
+}
+
+.last-right {
+  width: 29%;
   float: right;
 }
 
@@ -43,4 +209,6 @@ small {
   transform: scale(1.5) translateX(-25%) translateY(-10%);
 }
 
-
+.last_presentation h3 {
+  color: #00467F;
+}
